--- a/projects/Coursework.html
+++ b/projects/Coursework.html
@@ -41,8 +41,8 @@
     
     <h1 class="mb-3">Engineering Coursework</h1>
     <figure class="text-center my-3">
-      <img src="../assets/images/Portfolio.jpg" class="img-fluid rounded shadow" alt="Subteam Photo" style="max-width:60%;">
-      <figcaption class="mt-2 text-muted">Place</figcaption>
+      <img src="../assets/images/PortfolioCW.webp" class="img-fluid rounded shadow" alt="Subteam Photo" style="max-width:60%;">
+      <figcaption class="mt-2 text-muted"></figcaption>
     </figure>
     <p>
       <strong></strong> 
@@ -58,9 +58,9 @@
 
     <h3>Introduction to Machining</h3>
     <ul>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li>Learned to use the Lathe through machining threaded rod used in car jack.</li>
+      <li>Learned CNC Mill through machining acrylic blocks used in car jack top and bottom blocks.</li>
+      <li>Gained familiarity with 3D printing through CADing and 3D printing left and right support blocks.</li>
       <li></li>
       <li><strong>Learned/Developed:</strong> How to apply properties of thermodynamics for cooling; How to coordinate with team members and manufacturers; Improved skills with Solidworks and material selection.</li>
     </ul>
