--- a/projects/Coursework.html
+++ b/projects/Coursework.html
@@ -71,7 +71,7 @@
     </ul>
 
     <figure class="text-center my-3">
-      <img src="../assets/images/PortfolioIM1.jpg" class="img-fluid rounded shadow" alt="Machining Work" style="max-width:60%;">
+      <img src="../assets/images/PortfolioIM1.jpg" class="img-fluid rounded shadow" alt="Machining Work" style="max-width:30%;">
       <figcaption class="mt-2 text-muted">Machining and fabrication work completed in the course.</figcaption>
     </figure>
 
@@ -95,14 +95,21 @@
       <li><strong>Skills:</strong> Circuit Analysis, Oscilloscope Use, Simulation, Digital Logic Design</li>
     </ul>
 
-    <figure class="text-center my-3">
-      <img src="../assets/images/PortfolioCW3.jpg" class="img-fluid rounded shadow" alt="Electrical Engineering Coursework" style="max-width:60%;">
+    <div class="row justify-content-center my-3">
+  <div class="col-md-4 text-center">
+    <figure>
+      <img src="../assets/images/PortfolioCW3.jpg" class="img-fluid rounded shadow" alt="Electrical Engineering Coursework" style="max-width:30%;">
       <figcaption class="mt-2 text-muted">Counter Circuit</figcaption>
     </figure>
-    <figure class="text-center my-3">
-      <img src="../assets/images/PortfolioCW4.jpg" class="img-fluid rounded shadow" alt="Electrical Engineering Coursework" style="max-width:60%;">
+  </div>
+
+  <div class="col-md-4 text-center">
+    <figure>
+      <img src="../assets/images/PortfolioCW4.jpg" class="img-fluid rounded shadow" alt="Electrical Engineering Coursework" style="max-width:30%;">
       <figcaption class="mt-2 text-muted">Timer Logic</figcaption>
     </figure>
+  </div>
+</div>
 
 
     <!-- =========================== -->
@@ -125,8 +132,8 @@
     </ul>
 
     <figure class="text-center my-3">
-      <img src="../assets/images/PortfolioF1.3.PNG" class="img-fluid rounded shadow" alt="FEA Example">
-      <figcaption class="mt-2 text-muted">Finite element analysis and mechanical design applications.</figcaption>
+      <img src="../assets/images/PortfolioCW5.png" class="img-fluid rounded shadow" alt="FEA Example" style="max-width:30%;">
+      <figcaption class="mt-2 text-muted">Finite Element Analysis on Bar.</figcaption>
     </figure>
 
 
