--- a/projects/Coursework.html
+++ b/projects/Coursework.html
@@ -98,14 +98,14 @@
     <div class="row justify-content-center my-3">
   <div class="col-md-4 text-center">
     <figure>
-      <img src="../assets/images/PortfolioCW3.jpg" class="img-fluid rounded shadow" alt="Electrical Engineering Coursework" style="max-width:30%;">
+      <img src="../assets/images/PortfolioCW3.jpg" class="img-fluid rounded shadow" alt="Electrical Engineering Coursework" style="max-width:40%;">
       <figcaption class="mt-2 text-muted">Counter Circuit</figcaption>
     </figure>
   </div>
 
   <div class="col-md-4 text-center">
     <figure>
-      <img src="../assets/images/PortfolioCW4.jpg" class="img-fluid rounded shadow" alt="Electrical Engineering Coursework" style="max-width:30%;">
+      <img src="../assets/images/PortfolioCW4.jpg" class="img-fluid rounded shadow" alt="Electrical Engineering Coursework" style="max-width:40%;">
       <figcaption class="mt-2 text-muted">Timer Logic</figcaption>
     </figure>
   </div>
@@ -152,9 +152,13 @@
 
     <h4>Tools &amp; Technologies</h4>
     <ul>
-      <li><strong>Software:</strong> SolidWorks Flow Simulation / MATLAB (if applicable)</li>
-      <li><strong>Skills:</strong> CFD, Fluid Dynamics Modeling, Dimensional Analysis</li>
+      <li><strong>Software:</strong> SolidWorks, ANSYS, MATLAB</li>
+      <li><strong>Skills:</strong> CFD, Fluid Dynamics Modeling, Dimensional Analysis, FLuid Analysis</li>
     </ul>
+     <figure class="text-center my-3">
+      <img src="../assets/images/PortfolioIM1.jpg" class="img-fluid rounded shadow" alt="Fluid Analysis" style="max-width:40%;">
+      <figcaption class="mt-2 text-muted">Fluid Analysis of Tube in ANSYS</figcaption>
+    </figure>
 
 
     <!-- =========================== -->
@@ -167,6 +171,7 @@
       <li>Analyzed vapor compression refrigeration cycles and gas power cycles.</li>
       <li>Learned psychrometry and HVAC load calculations.</li>
       <li>Computed thermodynamic properties using tables, charts, and Python (CoolProp).</li>
+      <li><strong>Software:</strong> Python</li>
       <li><strong>Learned/Developed:</strong> Cycle analysis, state diagrams, refrigeration and power cycle modeling, HVAC fundamentals.</li>
     </ul>
 
@@ -189,6 +194,11 @@
       <li><strong>Software:</strong> SolidWorks</li>
       <li><strong>Skills:</strong> 3D Modeling, Technical Drawings, GD&T Principles</li>
     </ul>
+
+     <figure class="text-center my-3">
+      <img src="../assets/images/PortfolioCW6.jpg" class="img-fluid rounded shadow" alt="CAD" style="max-width:40%;">
+      <figcaption class="mt-2 text-muted">Working CAD of Toy Truck</figcaption>
+    </figure>
 
 
     <!-- =========================== -->
