--- a/projects/Coursework.html
+++ b/projects/Coursework.html
@@ -156,7 +156,7 @@
       <li><strong>Skills:</strong> CFD, Fluid Dynamics Modeling, Dimensional Analysis, FLuid Analysis</li>
     </ul>
      <figure class="text-center my-3">
-      <img src="../assets/images/PortfolioIM1.jpg" class="img-fluid rounded shadow" alt="Fluid Analysis" style="max-width:40%;">
+      <img src="../assets/images/PortfolioCW7.png" class="img-fluid rounded shadow" alt="Fluid Analysis" style="max-width:40%;">
       <figcaption class="mt-2 text-muted">Fluid Analysis of Tube in ANSYS</figcaption>
     </figure>
 
