--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
               <li><a class="dropdown-item" href="projects/WSP.html">WSP Internship</a></li>
               <li><a class="dropdown-item" href="projects/RITECMO.html">RIT Day Labs</a></li>
               <li><a class="dropdown-item" href="projects/RITVex.html">RIT VEXU Robotics</a></li>
+              <li><a class="dropdown-item" href="projects/Hackathons.html">Hackathons</a></li>
             </ul>
           </li>
         </ul>
