hackathon page update

--- a/projects/Hackathons.html
+++ b/projects/Hackathons.html
@@ -121,7 +121,7 @@
       <img src="../assets/images/PortfolioHack2.jpg"
            class="img-fluid rounded shadow"
            alt="Hardware Assembly">
-      <figcaption class="mt-2 text-muted">Electronics & wiring assembly</figcaption>
+      <figcaption class="mt-2 text-muted">Raspberry Pi hardware assembly</figcaption>
     </figure>
   </div>
 
@@ -130,7 +130,7 @@
       <img src="../assets/images/PortfolioHack3.jpg"
            class="img-fluid rounded shadow"
            alt="Servo Sorting Mechanism">
-      <figcaption class="mt-2 text-muted">Servo-driven sorting mechanism</figcaption>
+      <figcaption class="mt-2 text-muted">Electronics & wiring assembly</figcaption>
     </figure>
   </div>
 
