--- a/projects/RITECMO.html
+++ b/projects/RITECMO.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>RIT Research/title>
+  <title>RIT Research</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -28,7 +28,7 @@
               <li><a class="dropdown-item" href="WSP.html">WSP Internship</a></li>
               <li><a class="dropdown-item" href="RITECMO.html">RIT Day Labs</a></li>
               <li><a class="dropdown-item" href="RITVex.html">RIT VEXU Robotics</a></li>
-              <li><a class="dropdown-item" href="projects/Hackathons.html">Hackathons</a></li>
+              <li><a class="dropdown-item" href="Hackathons.html">Hackathons</a></li>
             </ul>
           </li>
         </ul>
