--- a/projects/F1.html
+++ b/projects/F1.html
@@ -29,7 +29,7 @@
               <li><a class="dropdown-item" href="WSP.html">WSP Internship</a></li>
               <li><a class="dropdown-item" href="RITECMO.html">RIT Day Labs</a></li>
               <li><a class="dropdown-item" href="RITVex.html">RIT VEXU Robotics</a></li>
-              <li><a class="dropdown-item" href="projects/Hackathons.html">Hackathons</a></li>
+              <li><a class="dropdown-item" href="Hackathons.html">Hackathons</a></li>
             </ul>
           </li>
         </ul>
