VEXU page update

--- a/projects/RITVex.html
+++ b/projects/RITVex.html
@@ -137,7 +137,7 @@
 </ul>
 
 <figure class="text-center my-3">
-  <img src="../assets/images/VEXU_Catapult.jpg" class="img-fluid rounded shadow" alt="Dual Motor Catapult System">
+  <img src="../assets/images/PortfolioVEXU.11.png" class="img-fluid rounded shadow" alt="Dual Motor Catapult System" style="max-width:60%;">
   <figcaption class="mt-2 text-muted">Dual-Motor Catapult System – 24in Robot</figcaption>
 </figure>
 
