Dropdown menu update

--- a/projects/CRC.html
+++ b/projects/CRC.html
@@ -11,31 +11,46 @@
 
   <!-- Navbar (reuse across all pages) -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="../index.html">Handsome Zheng</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Projects</a>
-            <ul class="dropdown-menu dropdown-menu-end">
-              <li><a class="dropdown-item" href="FoosballResearch.html">Columbia Creative Research Lab</a></li>
-              <li><a class="dropdown-item" href="F1.html">FSAE Powertrain</a></li>
-              <li><a class="dropdown-item" href="CRC.html">Combat Robotics</a></li>
-              <li><a class="dropdown-item" href="Coursework.html">Coursework</a></li>
-              <li><a class="dropdown-item" href="WSP.html">WSP Internship</a></li>
-              <li><a class="dropdown-item" href="RITECMO.html">RIT Day Labs</a></li>
-              <li><a class="dropdown-item" href="RITVex.html">RIT VEXU Robotics</a></li>
-          <li><a class="dropdown-item" href="Hackathons.html">Hackathons</a></li>
-            </ul>
-          </li>
-        </ul>
-      </div>
+  <div class="container-fluid">
+    <a class="navbar-brand" href="../">Handsome Zheng</a>
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav ms-auto">
+
+        <!-- Home -->
+        <li class="nav-item">
+          <a class="nav-link" href="../">Home</a>
+        </li>
+
+        <!-- Coursework (NEW BUTTON) -->
+        <li class="nav-item">
+          <a class="nav-link" href="../projects/Coursework.html">Coursework</a>
+        </li>
+
+        <!-- Projects Dropdown -->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
+            Projects
+          </a>
+          <ul class="dropdown-menu dropdown-menu-end">
+            <li><a class="dropdown-item" href="FoosballResearch.html">Columbia Creative Research Lab</a></li>
+            <li><a class="dropdown-item" href="F1.html">FSAE Powertrain</a></li>
+            <li><a class="dropdown-item" href="CRC.html">Combat Robotics</a></li>
+            <li><a class="dropdown-item" href="WSP.html">WSP Internship</a></li>
+            <li><a class="dropdown-item" href="RITECMO.html">RIT Day Labs</a></li>
+            <li><a class="dropdown-item" href="RITVex.html">RIT VEXU Robotics</a></li>
+            <li><a class="dropdown-item" href="Hackathons.html">Hackathons</a></li>
+          </ul>
+        </li>
+
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
 
   <!-- Project Content -->
   <section class="container my-5">
