--- a/index.html
+++ b/index.html
@@ -9,41 +9,49 @@
 </head>
 <body>
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">My Portfolio</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-          </li>
-          
-          <!-- Projects Dropdown -->
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-              aria-expanded="false">
-              Projects
-            </a>
-            <ul class="dropdown-menu dropdown-menu-end">
-              <li><a class="dropdown-item" href="projects/FoosballResearch.html">Columbia Creative Research Lab</a></li>
-              <li><a class="dropdown-item" href="projects/F1.html">FSAE Powertrain</a></li>
-              <li><a class="dropdown-item" href="projects/CRC.html">Combat Robotics</a></li>
-              <li><a class="dropdown-item" href="projects/Coursework.html">Coursework</a></li>
-              <li><a class="dropdown-item" href="projects/WSP.html">WSP Internship</a></li>
-              <li><a class="dropdown-item" href="projects/RITECMO.html">RIT Day Labs</a></li>
-              <li><a class="dropdown-item" href="projects/RITVex.html">RIT VEXU Robotics</a></li>
-              <li><a class="dropdown-item" href="projects/Hackathons.html">Hackathons</a></li>
-            </ul>
-          </li>
-        </ul>
-      </div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <!-- Brand -->
+    <a class="navbar-brand" href="/">My Portfolio</a>
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav ms-auto">
+
+        <!-- Home -->
+        <li class="nav-item">
+          <a class="nav-link active" href="/">Home</a>
+        </li>
+
+        <!-- Coursework (NEW BUTTON) -->
+        <li class="nav-item">
+          <a class="nav-link" href="/projects/Coursework.html">Coursework</a>
+        </li>
+
+        <!-- Projects Dropdown -->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
+            Projects
+          </a>
+          <ul class="dropdown-menu dropdown-menu-end">
+            <li><a class="dropdown-item" href="/projects/FoosballResearch.html">Columbia Creative Research Lab</a></li>
+            <li><a class="dropdown-item" href="/projects/F1.html">FSAE Powertrain</a></li>
+            <li><a class="dropdown-item" href="/projects/CRC.html">Combat Robotics</a></li>
+            <li><a class="dropdown-item" href="/projects/WSP.html">WSP Internship</a></li>
+            <li><a class="dropdown-item" href="/projects/RITECMO.html">RIT Day Labs</a></li>
+            <li><a class="dropdown-item" href="/projects/RITVex.html">RIT VEXU Robotics</a></li>
+            <li><a class="dropdown-item" href="/projects/Hackathons.html">Hackathons</a></li>
+          </ul>
+        </li>
+
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
+ 
 
   <!-- Head -->
   <header class="bg-light text-center py-5">
